--- a/choose.html
+++ b/choose.html
@@ -16,11 +16,11 @@
     <h1>Choose your spaceship</h1>
     <div class="spaceships">
       <button class="spaceship" id="ship1">
-        <img src="./images/Dreadnaught.png" alt="Spaceship 1" width="150" height="150" />
+        <img src="./images/dreadnaught.png" alt="Spaceship 1" width="150" height="150" />
         <p>Dreadnaught</p>
       </button>
       <button class="spaceship" id="ship2">
-        <img src="./images/Quinjet-Ship.png" alt="Spaceship 2" width="150" height="150" />
+        <img src="./images/quinjet.png" alt="Spaceship 2" width="150" height="150" />
         <p>Quinjet Ship</p>
       </button>
     </div>
