--- a/choose.html
+++ b/choose.html
@@ -16,7 +16,7 @@
     <h1>Choose your spaceship</h1>
     <div class="spaceships">
       <button class="spaceship" id="ship1">
-        <img src="./images/dreadnaught.png" alt="Spaceship 1" width="150" height="150" />
+        <img src="./images/redjet.png" alt="Spaceship 1" width="150" height="150" />
         <p>Dreadnaught</p>
       </button>
       <button class="spaceship" id="ship2">
