add game over and modal

--- a/game.html
+++ b/game.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/favicon.svg" type="image/x-icon">
-  <title>Galaxy Spaceship</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="game.css">
-  <script type="module" src="script.js"></script>
-</head>
-<body id="game-page">
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/favicon.svg" type="image/x-icon" />
+    <title>Galaxy Spaceship</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="game.css" />
+    <script type="module" src="script.js" defer></script>
+  </head>
+  <body id="game-page">
+    <div class="container">
+      <button id="left-btn" class="touch-button">&#8592;</button>
+      <button id="right-btn" class="touch-button">&#8594;</button>
+    </div>
 
-  </div>
-</body>
+    <div id="game-over-modal" class="modal hidden">
+        <div class="modal-content">
+          <h2 class="modal-title">Game Over</h2>
+          <button id="try-again-btn">Try Again</button>
+        </div>
+      </div>
+  </body>
 </html>
